--- a/index.html
+++ b/index.html
@@ -155,7 +155,6 @@
                     <div class="class-image">
                         <img src="yoga_class.webp" alt="Morning Yoga Class">
                         <div class="class-overlay">
-                            <span class="class-level">Advanced/Intermediate</span>
                         </div>
                     </div>
                     <div class="class-content">
@@ -176,7 +175,6 @@
                     <div class="class-image">
                         <img src="yoga_sunset.jpeg" alt="Evening Yoga Class">
                         <div class="class-overlay">
-                            <span class="class-level">Advanced/Intermediate</span>
                         </div>
                     </div>
                     <div class="class-content">
@@ -184,10 +182,9 @@
                         <p>Unwind and rejuvenate with focused practice after a busy day</p>
                         <ul class="class-details">
                             <li><i class="far fa-clock"></i> 5:00 - 6:00 PM (IST)</li>
-                            <li><i class="fas fa-signal"></i> Advanced/Intermediate</li>
-                            <li><i class="fas fa-video"></i> Live + Recorded</li>
+                            <li><i class="fas fa-video"></i> Fully Online</li>
                             <li><i class="fas fa-rupee-sign"></i> 2000 INR</li>
-                            <li><i class="fas fa-tag"></i> Early Bird: 1500 INR</li>
+                            <li><i class="fas fa-tag"></i> New Year's Discount: 1500 INR</li>
                         </ul>
                         <a href="index.html#contact" class="btn btn-outline">Register</a>
                     </div>
@@ -405,7 +402,7 @@
                             <i class="fas fa-clock"></i>
                         </div>
                         <h3>Class Hours</h3>
-                        <p>Morning: 8:30 - 9:30 AM (IST)</p>
+                        <p>Morning: 10:30 - 11:30 AM (IST)</p>
                         <p>Evening: 5:00 - 6:00 PM (IST)</p>
                     </div>
                     
