--- a/index.html
+++ b/index.html
@@ -162,8 +162,7 @@
                         <p>Start your day with energizing sequences to awaken body and mind</p>
                         <ul class="class-details">
                             <li><i class="far fa-clock"></i> 10:30 - 11:30 AM (IST)</li>
-                            <li><i class="fas fa-signal"></i> Advanced/Intermediate</li>
-                            <li><i class="fas fa-video"></i> Live + Recorded</li>
+                            <li><i class="fas fa-video"></i> Fully Recorded</li>
                             <li><i class="fas fa-rupee-sign"></i> 2000 INR</li>
                             <li><i class="fas fa-tag"></i> New Year's Discount: 1500 INR</li>
                         </ul>
