--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <p>Start your day with energizing sequences to awaken body and mind</p>
                         <ul class="class-details">
                             <li><i class="far fa-clock"></i> 10:30 - 11:30 AM (IST) - MON TO FRI</li>
-                            <li><i class="fas fa-video"></i> Fully Recorded</li>
+                            <li><i class="fas fa-video"></i> Fully Online</li>
                             <li><i class="fas fa-rupee-sign"></i> 2000 INR</li>
                             <li><i class="fas fa-tag"></i> New Year's Discount: 1500 INR</li>
                         </ul>
@@ -180,7 +180,7 @@
                         <h3>Evening Class</h3>
                         <p>Unwind and rejuvenate with focused practice after a busy day</p>
                         <ul class="class-details">
-                            <li><i class="far fa-clock"></i> 5:00 - 6:00 PM - MON TO FRI (IST)</li>
+                            <li><i class="far fa-clock"></i> 5:00 - 6:00 PM (IST) - MON TO FRI </li>
                             <li><i class="fas fa-video"></i> Fully Online</li>
                             <li><i class="fas fa-rupee-sign"></i> 2000 INR</li>
                             <li><i class="fas fa-tag"></i> New Year's Discount: 1500 INR</li>
