--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                             <li><i class="far fa-clock"></i> 10:30 - 11:30 AM (IST) - MON TO FRI</li>
                             <li><i class="fas fa-video"></i> Fully Online</li>
                             <li><i class="fas fa-rupee-sign"></i> 2000 INR</li>
-                            <li><i class="fas fa-tag"></i> New Year's Discount: 1500 INR</li>
+                            <li><i class="fas fa-tag"></i> New Year's Discount - Valid till 31st January: 1500 INR</li>
                         </ul>
                         <a href="index.html#contact" class="btn btn-outline">Register</a>
                     </div>
@@ -183,7 +183,7 @@
                             <li><i class="far fa-clock"></i> 5:00 - 6:00 PM (IST) - MON TO FRI </li>
                             <li><i class="fas fa-video"></i> Fully Online</li>
                             <li><i class="fas fa-rupee-sign"></i> 2000 INR</li>
-                            <li><i class="fas fa-tag"></i> New Year's Discount: 1500 INR</li>
+                            <li><i class="fas fa-tag"></i> New Year's Discount - Valid till 31st January: 1500 INR</li>
                         </ul>
                         <a href="index.html#contact" class="btn btn-outline">Register</a>
                     </div>
